docs/7.57/md/abenabap_words.md
---
title: "ABAP Words, Overview"
description: |
  ABAP words are the vocabulary of the ABAP language. ABAP statements are composed of ABAP words, operands, and operators according to defined syntax rules. ABAP words are taken from the English language and are grouped into ABAP language elements(https://help.sap.com/doc/abapdocu_757_index_htm/7.57
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_words.htm"
abapFile: "abenabap_words.htm"
keywords: ["select", "insert", "update", "delete", "loop", "do", "while", "if", "case", "try", "catch", "method", "class", "data", "types", "abenabap", "words"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Syntax Elements of an ABAP Program](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_syntax.htm) →  [ABAP Statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_statements.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ABAP Words, Overview, ABENABAP_WORDS, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASu
ggestion for improvement:)

ABAP Words, Overview

ABAP words are the vocabulary of the ABAP language. ABAP statements are composed of ABAP words, operands, and operators according to defined syntax rules. ABAP words are taken from the English language and are grouped into [ABAP language elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_language_element_glosry.htm "Glossary Entry") and into [ABAP language element additions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_language_elmnt_add_glosry.htm "Glossary Entry") that express the semantics of a statement. In addition to letters, ABAP words can also contain hyphens (\-) to form multiword expressions. In addition to the ABAP words, some [operators](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenoperator_glosry.htm "Glossary Entry") are also made up of letters.

The first ABAP word of a statement is the [ABAP keyword](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_keyword_glosry.htm "Glossary Entry"). The remaining ABAP words are then additions to a keyword. A single ABAP word can be used both as a keyword and as a non-keyword. For example, DATA is used as a keyword as well as an addition to other keywords. Not all statements are introduced using a keyword or contain ABAP words. For example, assignments with the [assignment operator \=](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenequals_operator.htm) or [method calls](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcall_method_static_short.htm) do not contain a keyword and do not necessarily contain another ABAP word.

ABAP words are not reserved names as they are known in other programming languages. Although the use of an ABAP word for [self-defined identifiers](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennaming_conventions.htm) is not forbidden, it should be avoided if possible. Even if this rule is followed, such a situation can occur if new language elements are introduced. Therefore, suitable naming conventions should be observed for self-defined identifiers to avoid conflicts with language elements.

The following table contains all ABAP words of the current ABAP language version, the names of [built-in data types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbuiltin_data_type_glosry.htm "Glossary Entry"), and the names of [operators](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenoperator_glosry.htm "Glossary Entry") that consist of letters. Names in ABAP programs are not case-sensitive.

ABAP\_BOOLEAN

ABAP\_SORTORDER\_TAB

ABAP\_SYSTEM\_TIMEZONE

ABAP\_USER\_TIMEZONE

ABAP-SOURCE

ABBREVIATED

ABS

ABSTRACT

ACCEPT

ACCEPTING

ACCESS

ACCORDING

ACCP

ACTION

ACTIVATION

ACTUAL

ADABAS

ADD

ADD\_DAYS

ADD\_MONTHS

ADD-CORRESPONDING

ADJACENT

ADJUST\_NUMBERS

ALIAS

ALIASES

ALIGN

ALL

ALLOCATE

ALLOW\_PRECISION\_LOSS

ALLOWED

ALPHA

AMDP

ANALYSIS

ANALYZER

AND

ANY

APPEND

APPENDAGE

APPENDING

APPLICATION

ARCHIVE

AREA

ARITHMETIC

AS

AS\_GEO\_JSON

AS400

ASCENDING

ASSERT

ASSIGN

ASSIGNED

ASSIGNING

ASSOCIATION

ASSOCIATIONS

ASYNCHRONOUS

AT

ATTRIBUTES

AUGMENTING

AUTHORITY

AUTHORITY-CHECK

AUTHORIZATION

AUTO

AVG

AVG,

BACK

BACKGROUND

BACKUP

BACKWARD

BADI

BALANCE

BASE

BEFORE

BEGIN

BEHAVIOR

BETWEEN

BIG

BINARY

BINTOHEX

BIT

BIT-AND

BIT-NOT

BIT-OR

BIT-XOR

BITFIELD

BLACK

BLANK

BLANKS

BLOB

BLOCK

BLOCKS

BLUE

BOUND

BOUNDARIES

BOUNDS

BOXED

BREAK-POINT

BREAKUP

BT

BUFFER

BULK

BY

BYPASSING

BYTE

BYTE-CA

BYTE-CN

BYTE-CO

BYTE-CS

BYTE-NA

BYTE-NS

BYTE-ORDER

CA

CALL

CALLING

CASE

CAST

CASTING

CATCH

CDS

CEIL

CENTER

CENTERED

CHANGE

CHANGING

CHANNELS

CHAR

CHAR-TO-HEX

CHARACTER

CHECK

CHECK\_BEFORE\_SAVE

CHECKBOX

CHILD

CI\_

CID

CIRCULAR

CL\_ABAP\_BEHV\_AUX

CL\_DBI\_UTILITIES

CL\_GUI\_FRONTEND\_SERVICES

CLASS

CLASS-CODING

CLASS-DATA

CLASS-EVENTS

CLASS-METHODS

CLASS-POOL

CLEANUP

CLEANUP\_FINALIZE

CLEAR

CLIENT

CLIENTS

CLNT

CLOB

CLOCK

CLOSE

CN

CO

COALESCE

CODE

CODING

COL\_BACKGROUND

COL\_GROUP

COL\_HEADING

COL\_KEY

COL\_NEGATIVE

COL\_NORMAL

COL\_POSITIVE

COL\_TOTAL

COLLECT

COLOR

COLUMN

COLUMNS

COMMENT

COMMENTS

COMMIT

COMMON

COMMUNICATION

COMPARING

COMPONENT

COMPONENTS

COMPRESSION

COMPUTE

CONCAT

CONCAT\_WITH\_SPACE

CONCATENATE

COND

CONDENSE

CONDITION

CONNECT

CONNECTION

CONSTANTS

CONTEXT

CONTEXTS

CONTINUE

CONTROL

CONTROLS

CONV

CONVERSION

CONVERT

COPIES

COPY

CORR

CORR\_SPEARMAN

CORRESPONDING

CORRSPEARMAN

COUNT

COUNT(\*)

COUNTRY

COVER

CP

CPI

CREATE

CREATING

CRITICAL

CROSS

CS

CUKY

CURR

CURRENCY

CURRENCY\_CONVERSION

CURRENT

CURSOR

CUSTOMER-FUNCTION

CYCLES

D16D

D16N

D16R

D34D

D34N

D34R

DANGEROUS

DATA

DATABASE

DATAINFO

DATASET

DATE

DATN

DATN\_ADD\_DAYS

DATN\_ADD\_MONTHS

DATN\_DAYS\_BETWEEN

DATS

DATS\_ADD\_DAYS

DATS\_ADD\_MONTHS

DATS\_DAYS\_BETWEEN

DATS\_FROM\_DATN

DATS\_IS\_VALID

DATS\_TIMS\_TO\_TSTMP

DATS\_TO\_DATN

DAYLIGHT

DAYNAME

DAYS\_BETWEEN

DB2

DB6

DD/MM/YY

DD/MM/YYYY

DDL

DDMMYY

DEALLOCATE

DEC

DECFLOAT16

DECFLOAT16\_DEC

DECFLOAT34

DECFLOAT34\_DEC

DECIMAL\_SHIFT

DECIMALS

DECLARATIONS

DEEP

DEFAULT

DEFERRED

DEFINE

DEFINING

DEFINITION

DELETE

DELETING

DEMAND

DENSE\_RANK

DEPARTMENT

DEPTH

DESCENDING

DESCRIBE

DESTINATION

DETAIL

DETERMINATION

DETERMINE

DETERMINISTIC

DF16\_DEC

DF16\_RAW

DF16\_SCL

DF34\_DEC

DF34\_RAW

DF34\_SCL

DIALOG

DIRECTORY

DISABLE

DISCARDING

DISCONNECT

DISPLAY

DISPLAY-MODE

DISTANCE

DISTINCT

DIV

DIVIDE

DIVIDE-CORRESPONDING

DIVISION

DO

DUMMY

DUPLICATE

DUPLICATES

DURATION

DURING

DYNAMIC

DYNPRO

EARLY

EDIT

EDITOR-CALL

ELSE

ELSEIF

EMPTY

ENABLED

ENABLING

ENCODING

END

END-ENHANCEMENT-SECTION

END-LINES

END-OF-DEFINITION

END-OF-EDITING

END-OF-FILE

END-OF-PAGE

END-OF-SELECTION

END-TEST-INJECTION

END-TEST-SEAM

ENDAT

ENDCASE

ENDCATCH

ENDCLASS

ENDDO

ENDENHANCEMENT

ENDEXEC

ENDFORM

ENDFUNCTION

ENDIAN

ENDIF

ENDING

ENDINTERFACE

ENDLOOP

ENDMETHOD

ENDMODULE

ENDON

ENDPROVIDE

ENDSELECT

ENDTRY

ENDWHILE

ENDWITH

ENGINEERING

ENHANCEMENT

ENHANCEMENT-POINT

ENHANCEMENT-SECTION

ENHANCEMENTS

ENTITIES

ENTITY

ENTRIES

ENTRY

ENUM

ENVIRONMENT

EQ

EQUIV

ERROR

ERRORS

ESCAPE

ESCAPING

EVENT

EVENTS

EXACT

EXCEPT

EXCEPTION

EXCEPTION-TABLE

EXCEPTIONS

EXCLUDE

EXCLUDING

EXEC

EXECUTE

EXISTS

EXIT

EXIT-COMMAND

EXPAND

EXPANDING

EXPIRATION

EXPLICIT

EXPONENT

EXPORT

EXPORTING

EXTENDED

EXTENSION

EXTRACT

EXTRACT\_DAY

EXTRACT\_HOUR

EXTRACT\_MINUTE

EXTRACT\_MONTH

EXTRACT\_SECOND

EXTRACT\_YEAR

FAIL

FAILED

FEATURES

FETCH

FIELD

FIELD-GROUPS

FIELD-SYMBOL

FIELD-SYMBOLS

FIELDS

FILE

FILL

FILTER

FILTER-TABLE

FILTERS

FINAL

FINALIZE

FIND

FIRST

FIRST\_VALUE

FIRST-LINE

FIXED-POINT

FKEQ

FKGE

FLAGS

FLOOR

FLTP

FLTP\_TO\_DEC

FLUSH

FOLLOWING

FONT

FOR

FORM

FORMAT

FORWARD

FOUND

FRACTIONAL

FRAME

FRAMES

FREE

FRIENDS

FROM

FULL

FUNCTION

FUNCTION-POOL

FUNCTIONALITY

FURTHER

GAPS

GE

GENERATE

GEOM\_EWKB

GET

GGM1

GIVING

GKEQ

GKGE

GLOBAL

GRAPH

GREEN

GROUP

GROUPING

GROUPS

GT

HANDLE

HANDLER

HARMLESS

HASHED

HAVING

HDB

HEAD-LINES

HEADER

HEADERS

HEADING

HELP-ID

HELP-REQUEST

HEXTOBIN

HIDE

HIERARCHY

HIERARCHY\_ANCESTORS

HIERARCHY\_ANCESTORS\_AGGREGATE

HIERARCHY\_DESCENDANTS

HIERARCHY\_DESCENDANTS\_AGGREGATE

HIERARCHY\_SIBLINGS

HIGH

HINT

HOLD

HOTSPOT

ICON

ID

IDENTIFICATION

IDENTIFIER

IDS

IF

IGNORE

IGNORING

IMMEDIATELY

IMPLEMENTATION

IMPLEMENTATIONS

IMPLEMENTED

IMPLICIT

IMPORT

IMPORTING

IN

INACTIVE

INCL

INCLUDE

INCLUDES

INCLUDING

INCREMENT

INCREMENTAL

INDEX

INDEX-LINE

INDICATORS

INFOTYPES

INHERITING

INIT

INITCAP

INITIAL

INITIALIZATION

INNER

INOUT

\*-INPUT

INPUT

INSERT

INSTANCE

INSTANCES

INSTR

INT1

INT2

INT4

INT8

INTENSIFIED

INTERFACE

INTERFACE-POOL

INTERFACES

INTERNAL

INTERSECT

INTERVALS

INTO

INVERSE

INVERTED-DATE

IS

IS\_VALID

ISO

JOB

JOIN

KEEP

KEEPING

KERNEL

KEY

KEYS

KEYWORDS

KIND

LAG

LANG

LANGUAGE

LAST

LAST\_VALUE

LATE

LAYOUT

LCHR

LE

LEAD

LEADING

LEAVE

LEAVES

LEFT

LEFT-JUSTIFIED

LEFTPLUS

LEFTSPACE

LEGACY

LENGTH

LET

LEVEL

LEVELS

LIKE

LIKE\_REGEXPR

LINE

LINE-COUNT

LINE-SELECTION

LINE-SIZE

LINEFEED

LINES

LINK

LIST

LIST-PROCESSING

LISTBOX

LITTLE

LLANG

LOAD

LOAD-OF-PROGRAM

LOB

LOCAL

LOCALE

LOCATE

LOCATE\_REGEXPR

LOCATE\_REGEXPR\_AFTER

LOCATOR

LOCK

LOCKS

LOG-POINT

LOGFILE

LOGICAL

LONG

LOOP

LOW

LOWER

LPAD

LPI

LRAW

LT

LTRIM

M

MAIL

MAIN

MAJOR-ID

MANY

MAP\_MESSAGES

MAPPED

MAPPING

MARGIN

MARK

MASK

MATCH

MATCH\_RESULT

MATCH\_RESULT\_TAB

MATCHCODE

MATCHED

MAX

MAXIMUM

MEASURES

MEDIAN

MEDIUM

MEMBERS

MEMORY

MESH

MESSAGE

MESSAGE-ID

MESSAGES

MESSAGING

METHOD

METHODS

MIN

MINIMUM

MINOR-ID

MM/DD/YY

MM/DD/YYYY

MMDDYY

MOD

MODE

MODIF

MODIFIER

MODIFY

MODULE

MONTHNAME

MOVE

MOVE-CORRESPONDING

MSSQLNT

MULTIPLE

MULTIPLY

MULTIPLY-CORRESPONDING

N

NA

NAME

NAMES

NAMETAB

NATIVE

NB

NE

NESTED

NESTING

NEW

NEW-LINE

NEW-PAGE

NEW-SECTION

NEXT

NO

NO-DISPLAY

NO-EXTENSION

NO-GAP

NO-GAPS

NO-GROUPING

NO-HEADING

NO-SCROLLING

NO-SIGN

NO-TITLE

NO-TOPOFPAGE

NO-ZERO

NODE

NODES

NON-UNICODE

NON-UNIQUE

NOT

NOWAIT

NP

NS

NTILE

NULL

NULLS

NUMBER

NUMBERING

NUMC

O

OBJECT

OBJECTS

OBLIGATORY

OCCURRENCE

OCCURRENCES

OCCURRENCES\_REGEXPR

OCCURS

OF

OFF

OFFSET

OLE

ON

ONE

ONLY

OPEN

OPERATIONS

OPTION

OPTIONAL

OPTIONS

OR

ORACLE

ORDER

ORPHANS

OTHER

OTHERS

OUT

OUTER

OUTPUT

OUTPUT-LENGTH

OVER

OVERFLOW

OVERLAY

P

PACK

PACKAGE

PAD

PADDING

PAGE

PAGES

PARAMETER

PARAMETER-TABLE

PARAMETERS

PARENT

PARENTS

PART

PARTIALLY

PARTITION

PATTERN

PCRE

PERCENTAGE

PERFORM

PERFORMING

PERIOD

PERMISSIONS

PERSON

PF

PF-STATUS

PINK

PLACES

POOL

POS\_HIGH

POS\_LOW

POSITION

PRAGMAS

PREC

PRECEDING

PRECHECK

PRECOMPILED

PREFERRED

PRESERVING

PRIMARY

PRINT

PRINT-CONTROL

PRIORITY

PRIVATE

PRIVILEGED

PROCEDURE

PRODUCT

PROGRAM

PROPERTY

PROTECTED

PROVIDE

PUBLIC

PUSH

PUSHBUTTON

PUT

QUAN

QUEUE-ONLY

QUICKINFO

RADIOBUTTON

RAISE

RAISING

RANGE

RANGES

RANK

RAW

RAWSTRING

READ

READ-ONLY

READER

RECEIVE

RECEIVED

RECEIVER

RECEIVING

RED

REDEFINITION

REDIRECTED

REDUCE

REDUCED

REF

REFERENCE

REFRESH

REGEX

REJECT

RELATING

REMOTE

RENAMING

REPL\_RESULT

REPL\_RESULT\_TAB

REPLACE

REPLACE\_REGEXPR

REPLACEMENT

REPLACING

REPORT

REPORTED

REQUEST

REQUESTED

REQUIRED

RESERVE

RESET

RESOLUTION

RESPECTING

RESPONSE

RESPONSES

RESPONSIBLE

RESULT

RESULTS

RESUMABLE

RESUME

RETRY

RETURN

RETURNCODE

RETURNING

RIGHT

RIGHT-JUSTIFIED

RIGHTPLUS

RIGHTSPACE

RISK

RMC\_COMMUNICATION\_FAILURE

RMC\_INVALID\_STATUS

RMC\_SYSTEM\_FAILURE

ROLLBACK

ROOT

ROUND

ROW

ROW\_NUMBER

ROWS

RPAD

RTRIM

RUN

SAP

SAP-SPOOL

SAVE

SAVE\_MODIFIED

SAVING

SCALE\_PRESERVING

SCALE\_PRESERVING\_SCIENTIFIC

SCAN

SCHEMA

SCIENTIFIC

SCIENTIFIC\_WITH\_LEADING\_ZERO

SCREEN

SCROLL

SCROLL-BOUNDARY

SCROLLING

SEARCH

SECONDARY

SECONDS

SECTION

SELECT

SELECT-OPTIONS

SELECTION

SELECTION-SCREEN

SELECTION-SET

SELECTION-SETS

SELECTION-TABLE

SELECTIONS

SEND

SEPARATE

SEPARATED

SESSION

SET

SETS

SHARED

SHIFT

SHORT

SHORTDUMP

SHORTDUMP-ID

SIBLINGS

SIGN

SIGN\_AS\_POSTFIX

SIMPLE

SIMULATION

SINGLE

SIZE

SKIP

SKIPPING

SMART

SOME

SORT

SORTABLE

SORTED

SOURCE

SPACE

SPANTREE

SPECIFIED

SPLIT

SPOOL

SPOTS

SQL

SQLSCRIPT

SSTRING

STABLE

STAMP

STANDARD

START

START-OF-EDITING

START-OF-SELECTION

STARTING

STATE

STATEMENT

STATEMENTS

STATIC

STATICS

STATUSINFO

STDDEV

STEP

STEP-LOOP

STOP

STRING

STRING\_AGG

STRUCTURE

STRUCTURES

STYLE

SUBKEY

SUBMATCH\_RESULT

SUBMATCH\_RESULT\_TAB

SUBMATCHES

SUBMIT

SUBROUTINE

SUBSCREEN

SUBSTRING

SUBSTRING\_REGEXPR

SUBTOTAL

SUBTRACT

SUBTRACT-CORRESPONDING

SUFFIX

SUM

SUMMARY

SUMMING

SUPPLIED

SUPPLY

SUPPRESS

SWITCH

SWITCHSTATES

SYBASE

SYMBOL

SYNCPOINTS

SYNTAX

SYNTAX-CHECK

SYNTAX-TRACE

SYSTEM-CALL

SYSTEM-EXCEPTIONS

SYSTEM-EXIT

T000

TAB

TABBED

TABLE

TABLES

TABLEVIEW

TABSTRIP

TARGET

TASK

TASKS

TEMPORARY

TEST

TEST-INJECTION

TEST-SEAM

TESTING

TEXT

TEXTPOOL

THEN

THROW

TIME

TIMES

TIMESTAMP

TIMEZONE

TIMN

TIMS

TIMS\_FROM\_TIMN

TIMS\_IS\_VALID

TIMS\_TO\_TIMN

TITLE

TITLE-LINES

TITLEBAR

?TO

TO

TO\_BLOB

TO\_CLOB

TOKENIZATION

TOKENS

TOP-LINES

TOP-OF-PAGE

TOTAL

TRACE-ENTRY

TRACE-FILE

TRACE-TABLE

TRAILING

TRANSACTION

TRANSFER

TRANSFORMATION

TRANSLATE

TRANSPORTING

TRDIR

TRMAC

TRUNCATE

TRUNCATION

TRY

TSTMP\_ADD\_SECONDS

TSTMP\_CURRENT\_UTCTIMESTAMP

TSTMP\_IS\_VALID

TSTMP\_SECONDS\_BETWEEN

TSTMP\_TO\_DATS

TSTMP\_TO\_DST

TSTMP\_TO\_TIMS

TSTMPL\_FROM\_UTCL

TSTMPL\_TO\_UTCL

TYPE

TYPE-POOL

TYPE-POOLS

TYPES

ULINE

UNASSIGN

UNBOUNDED

UNDER

UNICODE

UNION

UNIQUE

UNIT

UNIT\_CONVERSION

UNIX

UNPACK

UNTIL

UNWIND

UP

UPDATE

UPPER

USER

USER-COMMAND

USING

UTCL

UTCL\_ADD\_SECONDS

UTCL\_CURRENT

UTCL\_SECONDS\_BETWEEN

UTCLONG

UTF-8

UUID

VALID

VALIDATE

VALIDATION

VALUE

VALUE-REQUEST

VALUES

VAR

VARC

VARY

VARYING

VERBATIM

VERIFICATION-MESSAGE

VERSION

VIA

VISIBLE

WAIT

WEEKDAY

WHEN

WHERE

WHILE

WIDTH

WINDOW

WINDOWS

WITH

WITH-HEADING

WITH-TITLE

WITHOUT

WORD

WORK

WORKSPACE

WRITE

WRITER

XML

XSD

YELLOW

YES

YYMMDD

Z

ZERO

ZONE

1

2

3

4

5

6

7